--- a/FINAL_COMANDAv3/homeMOZO.html
+++ b/FINAL_COMANDAv3/homeMOZO.html
@@ -10,7 +10,9 @@
     <link href="Estilo_Bootstrap/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
      <!-- jQuery 2.1.3 -->
      <script src="Estilo_Bootstrap/plugins/jQuery/jQuery-2.1.3.min.js"></script>
-   
+  <!-- Font Awesome Icons -->
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+    
     <!-- Ionicons -->
     <link href="http://code.ionicframework.com/ionicons/2.0.0/css/ionicons.min.css" rel="stylesheet" type="text/css" />
     <!-- Theme style -->
@@ -53,14 +55,14 @@
             </div><!-- /.container-fluid -->
           </nav>
         </header>
-        
+        <!-- DIVS DINAMICOS -->
         <div id="principal" class="col-lg-10 col-md-offset-1"></div> 
         <div id="agregar" class="col-md-5 col-md-offset-3 margin-right=83px"></div> 
         <div id="listar" class="col-lg-10 col-md-offset-1"></div> 
-      </div>
     </div>
   </pre>
-  <script src="TS/app.js"></script>
+    <!-- jQuery 2.1.3 -->
+    <script src="Estilo_Bootstrap/plugins/jQuery/jQuery-2.1.3.min.js"></script>
     <!-- Bootstrap 3.3.2 JS -->
     <script src="Estilo_Bootstrap/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
     <!-- FastClick -->
@@ -70,6 +72,7 @@
     <!-- SlimScroll 1.3.0 -->
     <script src="Estilo_Bootstrap/plugins/slimScroll/jquery.slimscroll.min.js" type="text/javascript"></script>
     <!-- <script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js"></script> -->
+  
     <script>
       $(function () {
         $(".sidebar-menu li a").click(function () {
@@ -79,10 +82,11 @@
             $("body").animate({
               scrollTop: ($(target).offset().top - 32) + "px"
             }, 500);
+            }
           }
+                                    )          
         });
 
-      });
     </script>
   </body>
 </html>
