--- a/FINAL_COMANDAv3/homeSERVICIO.html
+++ b/FINAL_COMANDAv3/homeSERVICIO.html
@@ -8,19 +8,20 @@
     <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
     <!-- Bootstrap 3.3.2 -->
     <link href="Estilo_Bootstrap/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <!-- Font Awesome Icons -->
-    <!-- <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" /> -->
+  <!-- Font Awesome Icons -->
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
     <!-- Ionicons -->
     <link href="http://code.ionicframework.com/ionicons/2.0.0/css/ionicons.min.css" rel="stylesheet" type="text/css" />
-    <!-- Theme style -->
-    <link href="Estilo_Bootstrap/dist/css/AdminLTE.min.css" rel="stylesheet" type="text/css" />
-    <link href="Estilo_Bootstrap/dist/css/skins/skin-blue.min.css" rel="stylesheet" type="text/css" />
-    <link href="css\estilos.css" rel="stylesheet" type="text/css" />
-    <script src="TS/Persona.js"></script>
-    <script src="TS/Empleado.js"></script>
-    <script src="TS/Mesa.js"></script>
-    <script src="TS/enumerado.js"></script>
-    <script src="TS/app.js"></script>
+       <!-- Theme style -->
+       <link href="Estilo_Bootstrap/dist/css/AdminLTE.min.css" rel="stylesheet" type="text/css" />
+       <link href="Estilo_Bootstrap/dist/css/skins/skin-blue.min.css" rel="stylesheet" type="text/css" />
+       <link href="css\estilos.css" rel="stylesheet" type="text/css" />
+       <script src="TS/Persona.js"></script>
+       <script src="TS/Mesa.js"></script>
+       <script src="TS/Empleado.js"></script>
+       <script src="TS/enumerado.js"></script>
+       <script src="TS/app.js"></script>
+    
   </head>
   <body class="skin-blue fixed" data-spy="scroll" data-target="#scrollspy">
         <header class="main-header">               
@@ -38,17 +39,17 @@
               <div class="collapse navbar-collapse" id="navbar-collapse">
                 <ul class="nav navbar-nav">
                   <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Listado de Pendientes <span class="caret"></span></a>
+                    <li><a onclick="mostrarPedidosServicio();">Lista de Pendientes</a></li>
                   </li>
                 </ul>
               </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
           </nav>
         </header>
+        <!-- DIVS DINAMICOS -->
         <div id="principal" class="col-lg-10 col-md-offset-1"></div> 
         <div id="agregar" class="col-md-5 col-md-offset-3 margin-right=83px"></div> 
         <div id="listar" class="col-lg-10 col-md-offset-1"></div> 
-      </div>
     </div>
   </pre>
     <!-- jQuery 2.1.3 -->
@@ -62,6 +63,7 @@
     <!-- SlimScroll 1.3.0 -->
     <script src="Estilo_Bootstrap/plugins/slimScroll/jquery.slimscroll.min.js" type="text/javascript"></script>
     <!-- <script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js"></script> -->
+  
     <script>
       $(function () {
         $(".sidebar-menu li a").click(function () {
@@ -71,10 +73,11 @@
             $("body").animate({
               scrollTop: ($(target).offset().top - 32) + "px"
             }, 500);
+            }
           }
+                                    )          
         });
 
-      });
     </script>
   </body>
 </html>
