--- a/FINAL_COMANDAv3/homeCLIENTE.html
+++ b/FINAL_COMANDAv3/homeCLIENTE.html
@@ -1,80 +1,77 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link id="appFavicon" rel="icon" type="image/x-icon" href="img/favicon.png">
-    <title>CLIENTE</title>
-    <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
-    <!-- Bootstrap 3.3.2 -->
-    <link href="Estilo_Bootstrap/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <!-- Font Awesome Icons -->
-    <!-- <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" /> -->
-    <!-- Ionicons -->
-    <link href="http://code.ionicframework.com/ionicons/2.0.0/css/ionicons.min.css" rel="stylesheet" type="text/css" />
-    <!-- Theme style -->
-    <link href="Estilo_Bootstrap/dist/css/AdminLTE.min.css" rel="stylesheet" type="text/css" />
-    <link href="Estilo_Bootstrap/dist/css/skins/skin-blue.min.css" rel="stylesheet" type="text/css" />
-    <link href="css\estilos.css" rel="stylesheet" type="text/css" />
-    <script src="TS/Persona.js"></script>
-    <script src="TS/Mesa.js"></script>
-    <script src="TS/Empleado.js"></script>
-    <script src="TS/enumerado.js"></script>
-    <script src="TS/app.js"></script>
-  </head>
-  <body class="skin-blue fixed" data-spy="scroll" data-target="#scrollspy">
-        <header class="main-header">               
-          <nav class="navbar navbar-static-top">
-            <div class="container-fluid">
-              <div class="navbar-header">
-                <a href="homeSERVICIO.html" class="navbar-brand"><b>COMANDA</b>3.0</a>
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
-                  <i class="fa fa-bars"></i>
-                </button>
-                <span><img src="img/menu.png" style="height: 35px" vspace="5"></span>
-              </div>
-              <div></div>
+<html lang="es">
 
-              <div class="collapse navbar-collapse" id="navbar-collapse">
-                <ul class="nav navbar-nav">
-                  <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" onclick="mostrarPedidos();" data-toggle="dropdown">Mis Pedidos <span class="caret"></span></a>
-                  </li>
-                </ul>
-              </div><!-- /.navbar-collapse -->
-            </div><!-- /.container-fluid -->
-          </nav>
-        </header>
-        <div id="principal" class="col-lg-10 col-md-offset-1"></div> 
-        <div id="agregar" class="col-md-5 col-md-offset-3 margin-right=83px"></div> 
-        <div id="listar" class="col-lg-10 col-md-offset-1"></div> 
-      </div>
-    </div>
-  </pre>
-    <!-- jQuery 2.1.3 -->
-    <script src="Estilo_Bootstrap/plugins/jQuery/jQuery-2.1.3.min.js"></script>
-    <!-- Bootstrap 3.3.2 JS -->
-    <script src="Estilo_Bootstrap/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
-    <!-- FastClick -->
-    <script src='Estilo_Bootstrap/plugins/fastclick/fastclick.min.js'></script>
-    <!-- AdminLTE App -->
-    <script src="Estilo_Bootstrap/dist/js/app.min.js" type="text/javascript"></script>
-    <!-- SlimScroll 1.3.0 -->
-    <script src="Estilo_Bootstrap/plugins/slimScroll/jquery.slimscroll.min.js" type="text/javascript"></script>
-    <!-- <script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js"></script> -->
-    <script>
-      $(function () {
-        $(".sidebar-menu li a").click(function () {
-          var $this = $(this);
-          var target = $this.attr("href");
-          if (typeof target === 'string') {
-            $("body").animate({
-              scrollTop: ($(target).offset().top - 32) + "px"
-            }, 500);
-          }
-        });
+<head>
+  <meta charset="UTF-8">
+  <link id="appFavicon" rel="icon" type="image/x-icon" href="img/favicon.png">
+  <title>COMANDA 3.0</title>
+  <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
+ 
+  <!-- MODULOS -->
+  <script src="TS/enumerado.js"></script>
+  <script src="TS/app.js"></script>
+  <script src="TS/Persona.js"></script>
+  <script src="TS/Cliente.js"></script>
+  <!-- <script src="TS/Mesa.js"></script> -->
+  <script src="TS/Empleado.js"></script>
+  <script src="TS/Pedido.js"></script>
 
-      });
-    </script>
+       <!-- jQuery 2.1.3 -->
+       <script src="Estilo_Bootstrap/plugins/jQuery/jQuery-2.1.3.min.js"></script>
+     
+       <!-- AdminLTE App -->
+       <script src="Estilo_Bootstrap/dist/js/app.min.js" type="text/javascript"></script>
+        <!-- iCheck -->
+      <script src="Estilo_Bootstrap/plugins/iCheck/icheck.min.js" type="text/javascript"></script>
+  
+  <!-- Bootstrap 3.3.2 JS -->
+  <script src="Estilo_Bootstrap/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+
+  <!-- ESTILO EXTERNO -->
+  <link href="Estilo_Bootstrap/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+  <!-- Font Awesome Icons -->
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+  <!-- Theme style -->
+  <link href="Estilo_Bootstrap/dist/css/AdminLTE.min.css" rel="stylesheet" type="text/css" />
+  <!-- iCheck -->
+  <!-- <link href="Estilo_Bootstrap/plugins/iCheck/square/blue.css" rel="stylesheet" type="text/css" /> -->
+  <!-- Estilos -->
+  <link href="css/estilos.css" rel="stylesheet" type="text/css" />
+</head>
+
+<body class="login-page">
+    <div class="login-box">
+      <div class="login-logo">
+        <!--Park <b>Here </b><img src="img/millenniumFalcon.png" style="height: 30px;">-->
+        <img src="img/menu_comanda.png" style="height: 100px;">
+        <p id="tituloLogin">
+          RESTAURANT - LA COMANDA
+        </p>
+        <!--Park <b>Here </b><img src="img/parkHereLogo.png" style="height: 30px;">-->
+      </div><!-- /.login-logo -->
+      <div class="login-box-body">
+        <!--<p class="login-box-msg">Sign in to start your session</p>-->
+        <img id="profile-img" src="img/busquedaCliente.png">
+        <form onsubmit="buscarPedido();return false;">
+          <div class="form-group has-feedback">
+            <input id="numeroPedido" type="text" class="form-control" placeholder="Ingrese el número de PEDIDO Alfánumerico que fue brindado por el Mozo" autocomplete="off" autofocus/>
+            <span class="glyphicon glyphicon-gift form-control-feedback"></span>
+          </div>
+          <div class="form-group has-feedback">
+            <input id="numeroMesa" type="text" class="form-control" placeholder="Ingrese el número de MesA Alfánumerico que fue brindado por el Mozo" autocomplete="off" autofocus/>
+            <span class="glyphicon glyphicon-cutlery form-control-feedback"></span>
+          </div>
+          <div class="box-footer">
+            <button type="submit" class="btn btn-primary">Buscar Pedido</button>
+        </div>
+
+        </form>
+        <div><span class="label label-danger" id="errorLogin"></span></div>
+      </div><!-- /.login-box-body -->
+    </div><!-- /.login-box -->
+      <!-- DIVS DINAMICOS -->
+      <div id="principal" class="col-lg-10 col-md-offset-1"></div> 
+      <div id="agregar" class="col-md-5 col-md-offset-3 margin-right=83px"></div> 
+      <div id="listar" class="col-lg-10 col-md-offset-1"></div> 
   </body>
 </html>
